[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_unused_ignores = true

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
  "collective.checkdocs",
]
build-backend = "setuptools.build_meta"
