[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
select = ["F", "E", "W", "I", "N"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_unused_ignores = true

[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
  "collective.checkdocs",
]
build-backend = "setuptools.build_meta"
