[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvelib"
dynamic = ["version"]
description = "A library and command line interface for the CVE Project services."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Red Hat Product Security", email = "secalert@redhat.com" }
]
classifiers = [
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dependencies = [
    "click>=7.1.2",
    "requests>=2.32.0",
    "jsonschema>=4.7.2",
]

[project.optional-dependencies]
test = [
    "pytest",
]
dev = [
    "pytest",
    "ruff",
    "click-man",
    "mypy",
    "tox",
    "types-click",
    "types-requests",
    "types-jsonschema",
]

[project.scripts]
cve = "cvelib.cli:cli"

[project.urls]
Homepage = "https://github.com/RedHatProductSecurity/cvelib"
Repository = "https://github.com/RedHatProductSecurity/cvelib"

[tool.hatch.version]
path = "cvelib/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cvelib",
    "/man",
    "/tests",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "SECURITY.md",
]

[tool.hatch.build.targets.wheel]
packages = ["cvelib"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
select = ["F", "E", "W", "I", "N"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
warn_unused_ignores = true
